# ipaddr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ipaddr.1  ipaddr.h  ipaddr_classify.c  ipaddr_compare.c  ipaddr_format.c  ipaddr_ipv6.c  ipaddr_network.c  ipaddr_parse.c  ipaddr_prefix.c  ipaddr_uint128.c  main.c
debian/: changelog  control  copyright  manpages
freebsd/: .gitignore  Makefile
tests/: test.sh
